--- a/index.html
+++ b/index.html
@@ -1,29 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="./assets/utility.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+        
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-    <!-- <div id="container" class="d-flex justify-around align-center justify-center">
-            <div class="logo">
-                    <img src="./assets/images.png" alt="" width="200px">
-            </div>
-            <div class="navbar">
-                <nav class=" navbar-items  d-flex justify-center align-center">
-                    <a href="">HOME</a>
-                    <a href="">HOME</a>
-                    <a href="">HOME</a>
-                    <a href="">HOME</a>
-                </nav>
-            </div>
-            <div class="btn">
-                        <button>ORDER NOW</button>
-            </div>
-    </div> -->
-    <h1>hello</h1>
+
+<body style="background-color: #FFB414;">
+    <!-- navbar started  -->
+    <div class="container d-flex justify-around align-center mt4">
+        <div class="logo ">
+            <h1>HONEY</h1>
+        </div>
+        <nav>
+            <a href="#" id="navbar">HOME</a>
+            <a href="#" id="navbar">About US</a>
+            <a href="#" id="navbar">Honey</a>
+            <a href="#" id="navbar">Contact Us</a>
+        </nav>
+        <div class="icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-cart-shopping"></i>
+        </div>
+        <div class="hamburger">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </div>
+    <!-- navbar endede  -->
+
+    <!-- hero section started  -->
+    <div id="hero" class="d-flex justify-around align-center flex-wrap mt4">
+        <div class="main-text">
+            <h1>Best Organic $ Fresh</h1>
+            <h2>A Good Source Of <br /> Antioxidants</h2> <br />
+            <p>Organic And Fresh Honey Sales Up To 35 Off</p> <br />
+            <button id="btn-2">Shop Now</button>
+        </div>
+        <div class="main-logo">
+            <img src="./assets/glass-3243257_1280-removebg-preview.png " alt="image" id="main-logo">
+        </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <!-- hero section ended -->
+
+
+
+
+
+
+    <h1 class="center">Top Categories</h1>
+    <div class="top-items d-flex justify-center flex-wrap mt4">
+        <div>
+            <img src="./assets/top2.jpg" alt="" width="400px" class="top">
+            <img src="./assets/top3.jpg" alt="" width="400px" class="top">
+            <img src="./assets/toppp4.webp" alt="" width="400px" class="top">
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <!-- categories section started -->
+
+
+
+
+
+   <h1 class="center mt-5">Tranding Products</h1>
+<div class="tranding-products d-flex justify-around gap-5 mt-5 ">
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+</div>
+
+
+ <!-- categories section ended -->
+
+
+
+
+
+
+
+
+
+    <script src="https://kit.fontawesome.com/fb59b95ca9.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
 </html>
